--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: minimal-mistakes-jekyll
+remote_theme: minimal-mistakes-jekyll
 title: Aaron Brezel's homepage
 description: News! Products! News Products! And a portfolio.
